# spark_cli

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  hello.cpp  task.md
docs/: CLI.en.md  CLI.md
src/: main.rs
src/api/: client.rs  mod.rs  models.rs  openai_compat.rs  openrouter.rs  providers.rs
src/cli/: args.rs  commands.rs
src/config/: settings.rs
src/session/: history.rs  manager.rs  mod.rs
src/utils/: code.rs  format.rs  io.rs  mod.rs  secrets.rs
tests/: code_extract.rs
